# face-averaging

./: .gitignore  LICENSE  README.MD
common/dlib/: README.md
common/dlib/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  faq.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  ml.html  network.html  old_change_log.html  old_release_notes.html  optimization.html  other.html  parsing.html  release_notes.html  term_index.html
common/dlib/docs/dlib/: CMakeLists.txt.html  revision.h.html
common/dlib/docs/dlib/cuda/: cuda_data_ptr.h.html
common/dlib/docs/dlib/dnn/: loss.h.html
common/dlib/docs/dlib/geometry/: rectangle.h.html  rectangle_abstract.h.html
common/dlib/docs/dlib/image_processing/: generic_image.h.html
common/dlib/docs/dlib/image_transforms/: interpolation.h.html
common/dlib/docs/dlib/matrix/: matrix.h.html  matrix_blas_bindings.h.html  matrix_trsm.h.html
common/dlib/docs/dlib/optimization/: optimization_solve_qp_using_smo.h.html
common/dlib/docs/dlib/test/: dnn.cpp.html  image.cpp.html
common/dlib/docs/python/: genindex.html  index.html  objects.inv  searchindex.js
cpp/: CMakeLists.txt  faceAveraging.cpp  faceBlendCommon.hpp
python/: faceAveraging.py  faceBlendCommon.py  requirements.txt
